feat: 增加部门排序字段显示

--- a/apps/web-arco/src/locales/langs/en-US/system.json
+++ b/apps/web-arco/src/locales/langs/en-US/system.json
@@ -8,6 +8,8 @@
     "remark": "remark",
     "operation": "operation",
     "title": "department management",
-    "parentDept": "parent department"
+    "parentDept": "parent department",
+    "append": "append",
+    "sort": "sort"
   }
 }
