--- a/apps/web-arco/src/locales/langs/en-US/system.json
+++ b/apps/web-arco/src/locales/langs/en-US/system.json
@@ -63,6 +63,10 @@
     "createTime": "Creation Time",
     "operation": "Operation",
     "permissions": "Permissions",
-    "setPermissions": "Permissions"
+    "setPermissions": "Permissions",
+    "perm": "Permission",
+    "route": "Default Route",
+    "permMin": "Permission must be at least 2 characters",
+    "routeMin": "Default route must be at least 2 characters"
   }
 }
