feat: 新增账户管理功能，包括账户列表、账户详情、保存和删除账户的API接口，以及相关的表单和视图组件

--- a/apps/web-arco/src/locales/langs/en-US/system.json
+++ b/apps/web-arco/src/locales/langs/en-US/system.json
@@ -71,5 +71,11 @@
   },
   "permission": {
     "title": "Permission Control"
+  },
+  "account": {
+    "title": "Account Management",
+    "list": "Account List",
+    "name": "Account",
+    "accountName": "Account Name"
   }
 }
