feat: 系统设置内的菜单结构调整，把权限相关的全部转移到权限管理内

--- a/apps/web-arco/src/locales/langs/zh-CN/system.json
+++ b/apps/web-arco/src/locales/langs/zh-CN/system.json
@@ -77,6 +77,9 @@
     "title": "账户管理",
     "list": "账户列表",
     "name": "账户",
-    "accountName": "账户名称"
+    "accountName": "账户名称",
+    "permission": {
+      "title": "权限管理"
+    }
   }
 }
