feat: 字典类型列表的搜索表单合并到表头

--- a/apps/web-arco/src/locales/langs/en-US/system.json
+++ b/apps/web-arco/src/locales/langs/en-US/system.json
@@ -76,6 +76,29 @@
     "title": "Account Management",
     "list": "Account List",
     "name": "Account",
-    "accountName": "Account Name"
+    "accountName": "Account Name",
+    "permission": {
+      "title": "Permission Management"
+    }
+  },
+  "sysDict": {
+    "title": "Dictionary Management",
+    "type": {
+      "title": "Dictionary Type",
+      "name": "Type Name",
+      "code": "Type Code",
+      "status": "Status",
+      "remark": "Remark"
+    },
+    "data": {
+      "title": "Dictionary Data",
+      "label": "Label",
+      "key": "Key",
+      "value": "Value",
+      "status": "Status",
+      "remark": "Remark",
+      "extra": "Extra",
+      "sort": "Sort"
+    }
   }
 }
